--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
   <div class="container py-4">
     <h1 class="text-center mb-4">🧠 Jarvis Assistant</h1>
     
-    <div id="chat-box" class="bg-secondary p-3 rounded" style="height: 400px; overflow-y: scroll;"></div>
+    <div id="chat-box" class="bg-jarvis p-3 rounded" style="height: 400px; overflow-y: scroll;"></div>
 
     <form id="chat-form" class="d-flex mt-3">
       <input type="text" id="user-input" class="form-control me-2" placeholder="Tanya sesuatu..." required />
